navbar is now locked to the top of the window when scrolling, need to fix clipped content next

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,6 +3,10 @@
   height: 120px;
   background-color: #4056A1;
   justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  /* top: 0px; */
+
 }
 
 .nav-text {
